syntax = "proto3";

import "app/improving/event/domain/event_context_domain.proto";
import "common_domain.proto";


package app.improving.eventcontext.event;

message Event {
    EventId eventId = 1;
    EventInfo info = 2;
    EventMetaInfo meta = 3;
    EventStatus status = 4;
}

message EventState {
    Event event = 1;
}
